--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
 		/>
 		<link
 			rel="stylesheet"
@@ -18,7 +20,7 @@
 			href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./assests/css/style.css" />
 		<title>Work Day Scheduler</title>
 	</head>
 
@@ -30,11 +32,98 @@
 			</p>
 			<p id="currentDay" class="lead"></p>
 		</header>
-		<div class="container">
+		<div class="container" id="schedule">
 			<!-- Timeblocks go here -->
+			<div class="row" id="9">
+				<div class="col-1 hour">
+					<div class="time-block">9am</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText9"></textarea>
+				<div class="col-1 saveBtn">
+					<button class="" id="save">1</button>
+				</div>
+			</div>
+			<div class="row" id="10">
+				<div class="col-lg-1 hour">
+					<div class="time-block">10am</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText10"></textarea>
+				<div class="col-lg-1 saveBtn">
+					<button class="" id="save">1</button>
+				</div>
+			</div>
+			<div class="row" id="11">
+				<div class="col-lg-1 hour">
+					<div class="time-block">11am</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText11"></textarea>
+				<div class="col-lg-1 saveBtn">
+					<button class="" id="save">1</button>
+				</div>
+			</div>
+			<div class="row" id="12">
+				<div class="col-lg-1 hour">
+					<div class="time-block">12pm</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText12"></textarea>
+				<div class="col-lg-1 saveBtn">
+					<button class="" id="save">1</button>
+				</div>
+			</div>
+			<div class="row" id="13">
+				<div class="col-lg-1 hour">
+					<div class="time-block">1pm</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText13"></textarea>
+				<div class="col-lg-1 saveBtn">
+					<button class="" id="save">1</button>
+				</div>
+			</div>
+			<div class="row" id="14">
+				<div class="col-lg-1 hour">
+					<div class="time-block">2pm</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText14"></textarea>
+				<div class="col-lg-1 saveBtn">
+					<button class="" id="save">1</button>
+				</div>
+			</div>
+			<div class="row" id="15">
+				<div class="col-lg-1 hour">
+					<div class="time-block">3pm</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText15"></textarea>
+				<div class="col-lg-1 saveBtn">
+					<button class="">1</button>
+				</div>
+			</div>
+			<div class="row" id="16">
+				<div class="col-lg-1 hour">
+					<div class="time-block">4pm</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText16"></textarea>
+				<div class="col-lg-1 saveBtn">
+					<button class="" id="save">1</button>
+				</div>
+			</div>
+			<div class="row" id="17">
+				<div class="col-lg-1 hour">
+					<div class="time-block">5pm</div>
+				</div>
+				<textarea class="col-10 description" id="scheduleText17"></textarea>
+				<div class="col-lg-1 saveBtn" id="save">
+					<button class="" id="saved">1</button>
+				</div>
+			</div>
 		</div>
 
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+		<script src="./assests/javascript/script.js"></script>
 	</body>
 </html>
