Added Save and Load Abilities

--- a/index.html
+++ b/index.html
@@ -39,81 +39,81 @@
 					<div class="time-block">9am</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText9"></textarea>
-				<div class="col-1 saveBtn">
-					<button class="" id="save">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="10">
 				<div class="col-lg-1 hour">
 					<div class="time-block">10am</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText10"></textarea>
-				<div class="col-lg-1 saveBtn">
-					<button class="" id="save">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="11">
 				<div class="col-lg-1 hour">
 					<div class="time-block">11am</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText11"></textarea>
-				<div class="col-lg-1 saveBtn">
-					<button class="" id="save">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="12">
 				<div class="col-lg-1 hour">
 					<div class="time-block">12pm</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText12"></textarea>
-				<div class="col-lg-1 saveBtn">
-					<button class="" id="save">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="13">
 				<div class="col-lg-1 hour">
 					<div class="time-block">1pm</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText13"></textarea>
-				<div class="col-lg-1 saveBtn">
-					<button class="" id="save">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="14">
 			<div class="col-lg-1 hour">
 					<div class="time-block">2pm</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText14"></textarea>
-				<div class="col-lg-1 saveBtn">
-					<button class="" id="save">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="15">
 				<div class="col-lg-1 hour">
 					<div class="time-block">3pm</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText15"></textarea>
-				<div class="col-lg-1 saveBtn">
-					<button class="">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="16">
 				<div class="col-lg-1 hour">
 					<div class="time-block">4pm</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText16"></textarea>
-				<div class="col-lg-1 saveBtn">
-					<button class="" id="save">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 			<div class="row" id="17">
 				<div class="col-lg-1 hour">
 					<div class="time-block">5pm</div>
 				</div>
 				<textarea class="col-10 description" id="scheduleText17"></textarea>
-				<div class="col-lg-1 saveBtn" id="save">
-					<button class="" id="saved">1</button>
-				</div>
+				<button class="col-lg-1 saveBtn">
+					<p class="fas fa-save"></p>
+				</button>
 			</div>
 		</div>
 
